gitops/clusters/oci-a1/kafka/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  annotations:
    argocd.argoproj.io/sync-wave: '-40'
