gitops/clusters/oci-a1/kafka/gaegaeting-chat-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gaegaeting-chat-client
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kafka
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: chat
          app.kubernetes.io/part-of: gaegaeting
    ports:
    - port: 9092
      protocol: TCP
